# ovpn-status

./: .cargo_vcs_info.json  .gitignore  .woodpecker.yaml  Cargo.toml  Cargo.toml.orig  LICENSE  PKGBUILD  README.md  bacon.toml  ovpn_status.nu  ovpn_status.rs
.github/: dependabot.yml
.github/workflows/: build-release.yml  dependabot-auto-merge.yml
src/: lib.rs  main.rs
