[package]
name = "ovpn_status"
version = "0.3.1"
edition = "2021"
description = "Queries the endpoints used by OVPN's status site and shows status information in the terminal"
readme = "README.md"
license = "MIT"
keywords = ["ovpn", "terminal", "vpn", "status", "api"]

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[[bin]]
name = "ovpn_status"
path = "ovpn_status.rs"

[dependencies]
colored = "3.0.*"
reqwest = { version = "0.12.*", default-features = false, features = [
    "blocking",
    "cookies",
    "http2",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.*", features = ["derive"] }
