[package]
name = "ovpn_status"
version = "0.7.2"
edition = "2024"
description = "Show OVPN (provider) server status in the terminal"
#homepage = "https://github.com/APT37/ovpn-status"
repository = "https://github.com/APT37/ovpn-status"
readme = "README.md"
license = "MIT-0"
keywords = ["ovpn", "vpn", "status", "cli", "api"]

[[bin]]
name = "ovpn-status"
path = "ovpn_status.rs"

[dependencies]
colored = "3.0.*"
reqwest = { version = "0.13.*", default-features = false, features = [
    "blocking",
    "charset",
    "http2",
    "json",
    "rustls",
] }
serde = { version = "1.0.*", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
